--- a/day1/demo/hcjjb.html
+++ b/day1/demo/hcjjb.html
@@ -60,6 +60,13 @@
                 </div>
             </li>
         </ul>
+
+        <!-- 改变标题 -->
+        <div class="footer">
+            <hr>
+            <span>改变标题</span>
+            <input type="text" value="我的购物车清单" class="js-change-title">
+        </div>
     </div>
 </body>
 <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
@@ -87,8 +94,13 @@
             $(ev.currentTarget).closest('li').toggleClass('removed');
         }
 
+        function onChangeTitle(h2){
+            $('h2').text($('.js-change-title').val())
+        }
+
         $('.js-add').click(onAdd)
         $('.js-item').click(toggleRemoved)
+        $('.js-change-title').keyup(onChangeTitle)
     })
 </script>
 </html>
