--- a/day1/demo/todolist.html
+++ b/day1/demo/todolist.html
@@ -29,15 +29,26 @@
     <div id="app" class="container">
         <h2>
             <span>倒计时</span>
-            <button v-on:click="start">
+            <button :disabled="state==='started'" class="btn btn-lg btn-default" v-on:click="start">
                 <span>
                     <i class="glyphicon glyphicon-play"></i>
                 </span>
             </button>
+            <button :disabled="state!=='started'" class="btn btn-lg btn-default" v-on:click="pause">
+                <span>
+                    <i class="glyphicon glyphicon-pause"></i>
+                </span>
+            </button>
+            <button :disabled="state==='stoped'" class="btn btn-lg btn-default" v-on:click="stop">
+                <span>
+                    <i class="glyphicon glyphicon-stop"></i>
+                </span>
+            </button>
         </h2>
+        <h3>{{ workState }}</h3>
         <div class="well">
             <div class="dao-timer">
-                <span>{{ minute }}</span>分钟:<span>{{ second }}</span>秒
+                <span>{{ min }}</span>:<span>{{ sec }}</span>
             </div>
         </div>
     </div>
@@ -45,24 +56,56 @@
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script>
     const WORK_STATES = {
-        WORK:'工作',
-        REST:'休息'
+        WORK:'工作咯',
+        REST:'休息啦'
     }
     const WORKING_TIME_LENGTH_IN_MUNUTES = 25
     const RESTING_TIME_LENGTH_IN_MUNUTES = 5
+    const STATES = {
+        STARTED:'started',
+        PAUSED:'paused',
+        STOPED:'stoped'
+    }
 
     new Vue({
         el:"#app",
         data:{
             minute:WORKING_TIME_LENGTH_IN_MUNUTES,
             second:0,
-            workState:WORK_STATES,
-            timestamp:0
+            workState:WORK_STATES.WORK,
+            timestamp:0,
+            state:STATES.STOPED
+        },
+        computed:{
+            min:function(){
+                if(this.minute<10){
+                    return '0'+this.minute
+                }
+                return this.minute;
+            },
+            sec:function(){
+                if(this.second<10){
+                    return '0'+this.second
+                }
+                return this.second;
+            }
         },
         methods:{
             start:function(){
+                this.state = STATES.STARTED
                 this._tick();
                 this.interval = setInterval(this._tick,1000);
+            },
+            pause:function(){
+                this.state = STATES.PAUSED
+                clearInterval(this.interval)
+            },
+            stop:function(){
+                this.state = STATES.STOPED
+                clearInterval(this.interval)
+                this.minute = WORKING_TIME_LENGTH_IN_MUNUTES
+                this.second = 0
+                this.workState = WORK_STATES.WORK
             },
             _tick:function(){
                 // second不是0
