--- a/simple/index.html
+++ b/simple/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
   <head>
     <meta charset="utf-8">
     <title>simple</title>
   </head>
   <body>
-    <h1>L</h1>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
   </body>
